package Bank;

public interface PersonalData {

    String getInn();

}
